--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-firebase",
+  "name": "react-native-laravel",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.7",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
+    "axios": "^0.27.2",
+    "core-js": "^3.24.1",
+    "expo": "^46.0.7",
     "expo-status-bar": "~1.4.0",
+    "firebase": "9.1.0",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
