--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "@rneui/themed": "^4.0.0-rc.6",
     "axios": "^0.27.2",
     "core-js": "^3.24.1",
     "expo": "^46.0.7",
